# qq-farm-bot-panel

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.json
shared-data/: item_names.json  item_prices.json  level_exp.json  seeds.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: code_receiver.rs  error.rs  item_names.rs  item_prices.json  item_prices.rs  lib.rs  main.rs  plant_econ.rs
src-tauri/src/auth/: mod.rs  qr_login.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/network/: codec.rs  connection.rs  crypto.rs  mod.rs
src-tauri/src/proto/: corepb.rs  gamepb.emailpb.rs  gamepb.friendpb.rs  gamepb.illustratedpb.rs  gamepb.itempb.rs  gamepb.mallpb.rs  gamepb.plantpb.rs  gamepb.qqvippb.rs  gamepb.redpacketpb.rs  gamepb.sharepb.rs  gamepb.shoppb.rs  gamepb.taskpb.rs  gamepb.userpb.rs  gamepb.visitpb.rs  gatepb.rs  mod.rs
src-tauri/src/services/: automation.rs  email.rs  farm.rs  friend.rs  mall.rs  mod.rs  shop.rs  task.rs  vip.rs  warehouse.rs
src-tauri/src/state/: mod.rs
src/api/: index.ts
src/components/: Button.tsx  Card.tsx  EmptyState.tsx  Layout.tsx  PageHeader.tsx  Toast.tsx
src/data/: levelExp.ts  seeds.ts
src/hooks/: useIndicator.ts  useMinLoading.ts  useStatus.ts  useTauriEvent.ts
src/pages/: Dashboard.tsx  Farm.tsx  Friends.tsx  Inventory.tsx  Login.tsx  Logs.tsx  Settings.tsx  Tasks.tsx
src/store/: useAppStore.ts
src/types/: index.ts
