[package]
name = "qq-farm-pilot"
version = "0.1.0"
description = "QQ Farm automation tool"
authors = ["you"]
edition = "2021"

[lib]
name = "qq_farm_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["cookies", "json"] }
url = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
urlencoding = "2"

